refact: eliminated complexity and warnings related to not safe generic actions